# hanime-tv-plugin

./: .gitignore  README.md  htv_patch_m3u8.py  htv_search.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
src/htv_search/: __init__.py  __main__.py
src/yt_dlp_plugins/extractor/: htv.py
yt_dlp_plugins/extractor/: hentaihaven.py  hentaimama.py  hstream.py  htv.py  ohentai.py  oppaistream.py
